@@ -468,7 +468,6 @@ static const ssl_trace_tbl ssl_exts_tbl[] = {
     {TLSEXT_TYPE_srp, "srp"},
     {TLSEXT_TYPE_signature_algorithms, "signature_algorithms"},
     {TLSEXT_TYPE_use_srtp, "use_srtp"},
-    {TLSEXT_TYPE_heartbeat, "tls_heartbeat"},
     {TLSEXT_TYPE_application_layer_protocol_negotiation,
      "application_layer_protocol_negotiation"},
     {TLSEXT_TYPE_signed_certificate_timestamp, "signed_certificate_timestamps"},
@@ -782,9 +781,6 @@ static int ssl_print_extension(BIO *bio, int indent, int server,
             BIO_puts(bio, "<EMPTY>\n");
         }
         break;
-
-    case TLSEXT_TYPE_heartbeat:
-        return 0;
 
     case TLSEXT_TYPE_session_ticket:
         if (extlen != 0)
